Fix dl alignment

--- a/src/_assets/css/global/_typography.css
+++ b/src/_assets/css/global/_typography.css
@@ -170,6 +170,7 @@ summary::marker {
 dl {
 	display: grid;
 	grid-template-columns: auto 1fr;
+	align-content: start;
 	gap: var(--size-s) var(--size-m);
 }
 
